created login popup UI

--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -14,6 +14,9 @@
 @import '_FaqCategory'
 @import '_FaqElement'
 @import '_Submenu'
+@import '_Loginpopup'
+@import '_Forms'
+@import '_PrimaryButton'
 
 *
     margin: 0
