--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -2,7 +2,10 @@
 $main-color: rgb(0,0,0)
 $secondary-color: rgb(255,255,255)
 $text-hover-color: rgb(148,229,200)
+$text-gray: rgb(129,129,129)
 $border-color: rgba(0,0,0,0.1)
+$input-bg-color: rgb(247,247,247)
+$error-color: rgb(207,41,64)
 
 //Fonts
 $main-font: 'Playfair display', sans-serif
