--- a/src/css/App.css
+++ b/src/css/App.css
@@ -560,6 +560,9 @@
 .loginpopup {
   font-family: "Work Sans", sans-serif;
 }
+.loginpopup__form {
+  position: relative;
+}
 .loginpopup__label {
   display: block;
   font-size: 1.5rem;
@@ -670,6 +673,26 @@
 .primarybutton:hover .primarybutton__layer {
   height: 0px;
   opacity: 0;
+}
+
+.loader {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.7;
+  z-index: 4;
+}
+.loader__spinner {
+  display: block;
+  width: 120px;
 }
 
 * {
