--- a/src/sass/_Forms.sass
+++ b/src/sass/_Forms.sass
@@ -1,5 +1,7 @@
 .loginpopup
     font-family: $second-font
+    &__form
+        position: relative
     &__label
         display: block
         font-size: 1.5rem
