--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -14,7 +14,7 @@
 @import '_FaqCategory'
 @import '_FaqElement'
 @import '_Submenu'
-@import '_Loginpopup'
+@import '_Popups'
 @import '_Forms'
 @import '_PrimaryButton'
 @import '_Loader'
