--- a/src/sass/_Forms.sass
+++ b/src/sass/_Forms.sass
@@ -1,7 +1,8 @@
-.loginpopup
+.loginpopup, .subscribepopup
     font-family: $second-font
     &__form
         position: relative
+        width: 100%
     &__label
         display: block
         font-size: 1.5rem
