--- a/src/sass/_Header.sass
+++ b/src/sass/_Header.sass
@@ -2,6 +2,7 @@
     text-align: center
     letter-spacing: .6px
     margin-bottom: 30px
+    width: 100%
     &.header--left
         text-align: left
     &.header--left &__bottom-line
