--- a/src/css/App.css
+++ b/src/css/App.css
@@ -502,7 +502,7 @@
   left: 50%;
   width: 60%;
   min-height: 75%;
-  max-height: 95%;
+  max-height: 98%;
   transform: translate(-50%, -50%);
   background-color: rgb(255, 255, 255);
   z-index: 5;
@@ -573,12 +573,28 @@
   position: relative;
   width: 100%;
 }
+.loginpopup__form-section.subscribepopup__form-section--horizontal, .subscribepopup__form-section.subscribepopup__form-section--horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 38px;
+}
 .loginpopup__label, .subscribepopup__label {
   display: block;
   font-size: 1.5rem;
   letter-spacing: 2.4px;
   text-transform: uppercase;
   margin-bottom: 10px;
+}
+.loginpopup__label-checkbox, .subscribepopup__label-checkbox {
+  font-size: 1rem;
+  letter-spacing: 1.6px;
+  width: calc(100% - 20px - 12px);
+  order: 2;
+  margin-left: 20px;
+  cursor: pointer;
 }
 .loginpopup__input, .subscribepopup__input {
   display: block;
@@ -612,12 +628,27 @@
 .loginpopup__input:focus, .subscribepopup__input:focus {
   border: 1px solid rgb(0, 0, 0);
 }
+.loginpopup__input-checkbox, .subscribepopup__input-checkbox {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: 1px solid rgb(0, 0, 0);
+  width: 12px;
+  height: 12px;
+  transition: background-color 0.4s;
+  cursor: pointer;
+}
+.loginpopup__input-checkbox:checked, .subscribepopup__input-checkbox:checked {
+  background-color: rgb(0, 0, 0);
+}
 .loginpopup__error-info, .subscribepopup__error-info {
   font-size: 1.3rem;
   letter-spacing: 2.4px;
+  width: 100%;
   text-transform: uppercase;
   margin-top: 10px;
   color: rgb(207, 41, 64);
+  order: 3;
 }
 .loginpopup__form-section, .subscribepopup__form-section {
   margin-bottom: 20px;
