--- a/src/sass/_Submenu.sass
+++ b/src/sass/_Submenu.sass
@@ -5,7 +5,7 @@
     border: 1px solid $border-color
     height: 51px
     background-color: $secondary-color
-    margin-bottom: 100px
+    margin: 120px 0px
     transition: top .35s
     &.submenu--down
         top: 147px
