Add useActiveCategory custom hook

--- a/src/components/FaqCategory/FaqCategory.sass
+++ b/src/components/FaqCategory/FaqCategory.sass
@@ -2,7 +2,7 @@
 @use '../../sass/variables'
 
 .faqcategory
-    margin-bottom: 100px
+    padding-top: 140px
     &__header
         font-family: variables.$main-font
         color: variables.$main-color
