--- a/src/components/Submenu/Submenu.sass
+++ b/src/components/Submenu/Submenu.sass
@@ -4,11 +4,26 @@
 .submenu
     position: sticky
     top: 91px
-    +mixins.positioning(flex,row,space-between,center,nowrap)
-    border: 1px solid variables.$border-color
     height: 51px
     background-color: variables.$secondary-color
-    margin: 120px 0
-    transition: top .35s
+    margin-top: 120px
+    transform: translateX(0px)
+    transition: top .3s, width .3s, transform .3s
+    list-style: none
+    &__list
+        position: relative
+        +mixins.positioning(flex,row,space-around,center,nowrap)
+        width: 100%
+        height: 100%
+        top: 50%
+        left: 50%
+        transform: translate(-50%,-50%)
+        border: 1px solid variables.$border-color
+        padding: 1px 0px
+        transition: .3s
+        &.submenu__list--moving
+            width: calc( 100% + 190px )
+            border-right: none
+            border-left: none
     &.submenu--down
-        top: 147px
+        top: 146px
