--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -12,6 +12,7 @@ html
     -webkit-tap-highlight-color: transparent
     max-width: 1920px
     margin: 0 auto
+    scroll-behavior: smooth
 
 //===== Scrollbar CSS ===== 
   /* Firefox */
