Add Newsletter component

--- a/src/components/Loader/Loader.sass
+++ b/src/components/Loader/Loader.sass
@@ -14,7 +14,7 @@
     &__spinner
         width: 35px
         height: 35px
-        background: white
+        background: transparent
         border-radius: 50%
         border: 6px solid variables.$spinner-color
         border-bottom: 6px solid transparent
