--- a/src/components/PrimaryButton/PrimaryButton.sass
+++ b/src/components/PrimaryButton/PrimaryButton.sass
@@ -31,11 +31,11 @@
         transition: height .2s, transform 0s, opacity .7s
         &.primarybutton__layer--up
             top: 0
-            left: -1px
+            left: 0
             transform: rotate(0deg)
         &.primarybutton__layer--down
             bottom: 0
-            left: -1px
+            left: 0
             transform: rotate(180deg)
     &:hover &__text
         color: variables.$main-color
