--- a/src/components/SubmenuLink/SubmenuLink.sass
+++ b/src/components/SubmenuLink/SubmenuLink.sass
@@ -2,12 +2,9 @@
 @use '../../sass/variables'
 
 .submenulink
+    position: relative
     +mixins.positioning(flex,row,center,center,nowrap)
     height: 100%
-    &.submenulink--active
-        font-style: italic
-        border-top: 1px solid variables.$main-color
-        border-bottom: 1px solid variables.$main-color
     &__link
         font-family: variables.$second-font
         color: variables.$main-color
@@ -18,3 +15,14 @@
         transition: .3s
         &:hover
             color: variables.$text-hover-color
+    &__border-top, &__border-bottom
+        position: absolute
+        width: 100%
+        height: 1px
+        background-color: variables.$main-color
+    &__border-top
+        top: -1px
+        left: 0
+    &__border-bottom
+        bottom: -1px
+        left: 0
