--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -6,6 +6,7 @@ $text-gray: rgb(129,129,129)
 $border-color: rgba(0,0,0,0.1)
 $input-bg-color: rgb(247,247,247)
 $error-color: rgb(207,41,64)
+$sucess-color: rgb(17,130,59)
 $spinner-color: rgb(150,150,150)
 
 //Fonts
