add footer component with functionalities

--- a/src/components/Newsletter/Newsletter.sass
+++ b/src/components/Newsletter/Newsletter.sass
@@ -2,8 +2,8 @@
 @use '../../sass/variables'
 
 .newsletter
-    padding: 150px
-    margin: 100px 100px
+    padding: 6vw
+    margin: 6vw 6vw
     border: 1px solid variables.$main-color
     &__inner
         max-width: 700px
