--- a/src/sass/Forms.sass
+++ b/src/sass/Forms.sass
@@ -62,7 +62,7 @@
     &__form-section
         margin-bottom: 20px
         &--horizontal
-            +mixins.positioning(flex,row,flex-start,stretch,nowrap)
+            +mixins.positioning(flex,row,flex-start,stretch,wrap)
             margin-top: 38px
     &__api-error, &__api-sucess
         font-size: 1.5rem
