add requested changes during code review

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -128,7 +128,10 @@
         list-style: none
     &__nav-link
         display: block
+        font-family: variables.$second-font
         text-decoration: none
+        border: none
+        background-color: transparent
         color: variables.$secondary-color
         font-size: 1.2rem
         text-transform: uppercase
