--- a/src/components/Navigation/Navigation.sass
+++ b/src/components/Navigation/Navigation.sass
@@ -24,7 +24,7 @@
         &.navigation__inner--right
             justify-content: flex-end
             gap: 15px
-    &__social-icon, &__utils-icon
+    &__utils-icon
         font-size: 16px
         cursor: pointer
         transition: color .35s
