--- a/src/components/Pagination/Pagination.sass
+++ b/src/components/Pagination/Pagination.sass
@@ -3,7 +3,7 @@
 
 .pagination
     +mixins.positioning(flex,row,flex-end,center,nowrap)
-    margin: 50px 6vw
+    margin: 50px 0
     &__inner
         +mixins.positioning(flex,row,center,center,nowrap)
     &__list
