--- a/src/components/TopSlider/TopSlider.sass
+++ b/src/components/TopSlider/TopSlider.sass
@@ -5,7 +5,7 @@
     position: fixed
     top: 0
     left: 0
-    width: 100%
+    right: 0
     height: 65px
     padding: 15px 50px
     background-color: variables.$main-color
