add more requested changes

--- a/src/components/Socials/Socials.sass
+++ b/src/components/Socials/Socials.sass
@@ -5,7 +5,7 @@
     +mixins.positioning(flex,row,space-around,center,nowrap)
     width: 80%
     font-size: 2.4rem
-    &.socials-small
+    &.socials--small
         width: 25%
         font-size: 1.8rem
     &__link
