--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -13,14 +13,14 @@ html
     max-width: 1920px
     margin: 0 auto
     scroll-behavior: smooth
-#html.no-scroll
+html.no-smooth-scrolling
     scroll-behavior: auto
-#body.no-scroll::-webkit-scrollbar-thumb
+body.no-scroll::-webkit-scrollbar-thumb
     background-color: variables.$secondary-color
     scrollbar-color: variables.$secondary-color variables.$secondary-color
-#body
+body
     scroll-behavior: smooth
-#body.no-scroll
+body.no-scroll
     scroll-behavior: auto
 //===== Scrollbar CSS ===== 
   /* Firefox */
