add gallery component

--- a/src/components/Socials/Socials.sass
+++ b/src/components/Socials/Socials.sass
@@ -10,6 +10,7 @@
         font-size: 1.8rem
     &__link
         display: block
+        margin: 7.5px
     &__icon
         color: variables.$main-color
         transition: .3s
