add random products section

--- a/src/components/FancyLink/FancyLink.sass
+++ b/src/components/FancyLink/FancyLink.sass
@@ -3,6 +3,7 @@
 
 .fancylink
     +mixins.positioning(flex,row,center,center,nowrap)
+    padding: 6vw 0
     &__link
         +mixins.positioning(flex,row,center,center,nowrap)
         font-family: variables.$second-font
