--- a/src/components/Gallery/Gallery.sass
+++ b/src/components/Gallery/Gallery.sass
@@ -2,6 +2,7 @@
 @use '../../sass/variables'
 
 .gallery
+    position: relative
     width: 50%
     padding-right: 3vw
     &__big
@@ -31,3 +32,14 @@
             border: 1px solid variables.$main-color
     &__image-listing:last-child
         margin-right: 0
+    &__out-of-stock
+        position: absolute
+        top: 0
+        right: 3vw
+        padding: 10px 30px
+        font-family: variables.$second-font
+        font-size: 1.44rem
+        line-height: 200%
+        font-weight: 500
+        text-transform: uppercase
+        background-color: variables.$secondary-color
