--- a/src/components/PrimaryButton/PrimaryButton.sass
+++ b/src/components/PrimaryButton/PrimaryButton.sass
@@ -35,7 +35,7 @@
             transform: rotate(0deg)
         &.primarybutton__layer--down
             bottom: 0
-            left: 0
+            left: -1px
             transform: rotate(180deg)
     &:hover &__text
         color: variables.$main-color
