--- a/src/components/Pagination/Pagination.sass
+++ b/src/components/Pagination/Pagination.sass
@@ -4,6 +4,7 @@
 .pagination
     +mixins.positioning(flex,row,flex-end,center,nowrap)
     margin: 50px 0
+    margin-right: 6vw
     &__inner
         +mixins.positioning(flex,row,center,center,nowrap)
     &__list
