add requested changes during code review

--- a/src/components/CartListing/CartListing.sass
+++ b/src/components/CartListing/CartListing.sass
@@ -43,11 +43,17 @@
         width: 60px
         height: 100%
     &__delete-btn
+        display: block
         position: relative
         bottom: 8px
         display: block
         width: 15px
+        border: none
+        background-color: transparent
         cursor: pointer
+    &__delete-img
+        display: block
+        width: 15px
     &__format
         font-family: variables.$second-font
         color: variables.$text-gray
