--- a/src/pages/Shop/Shop.sass
+++ b/src/pages/Shop/Shop.sass
@@ -5,9 +5,8 @@
     padding: 120px 6vw
     &__listing
         position: relative
-        +mixins.positioning(flex,row,flex-start,stretch,wrap)
-        gap: 5%
-        row-gap: 3vw
+        +mixins.positioning(flex,row,space-between,stretch,wrap)
+        row-gap: 2.65vw
         padding-top: 70px
         margin: 0 6vw
         min-height: 500px
