add aboutus page component

--- a/src/components/Navigation/Navigation.sass
+++ b/src/components/Navigation/Navigation.sass
@@ -34,7 +34,7 @@
             color: variables.$text-hover-color
     &__sublogo
         position: absolute
-        bottom: 0
+        bottom: 7px
         left: 50%
         transform: translateX(-50%)
         opacity: 1
