--- a/src/components/Submenu/Submenu.sass
+++ b/src/components/Submenu/Submenu.sass
@@ -20,6 +20,7 @@
         left: 50%
         transform: translate(-50%,-50%)
         border: 1px solid variables.$border-color
+        background-color: variables.$secondary-color
         transition: .3s
         &.submenu__list--moving
             width: calc( 100% + 12vw )
