--- a/src/components/TopSlide/TopSlide.sass
+++ b/src/components/TopSlide/TopSlide.sass
@@ -33,5 +33,6 @@
         font-weight: 400
     &__text
         font-size: 1.1rem
+        letter-spacing: .6px
         margin-top: 7px
         font-weight: 300
