add manage products subpage

--- a/src/components/PrimaryButton/PrimaryButton.sass
+++ b/src/components/PrimaryButton/PrimaryButton.sass
@@ -17,6 +17,7 @@
         color: variables.$secondary-color
         font-weight: 400
         letter-spacing: 1.2px
+        line-height: 150%
         font-size: 1.4rem
         text-transform: uppercase
         z-index: 2
