--- a/src/pages/NoMatchPage/NoMatchPage.sass
+++ b/src/pages/NoMatchPage/NoMatchPage.sass
@@ -2,8 +2,8 @@
 @use '../../sass/variables'
 
 .nomatchpage
-
     padding: 180px 6vw
+    height: 870px
+    +mixins.positioning(flex,column,center,center,wrap)
     &__link
-        margin-top: 40px
         +mixins.positioning(flex,column,center,center,wrap)
