--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -3,11 +3,12 @@ $main-color: rgb(0,0,0)
 $secondary-color: rgb(255,255,255)
 $text-hover-color: rgb(148,229,200)
 $text-gray: rgb(100,100,100)
+$text-gray-menulink: rgb(170,170,170)
 $border-color: rgba(0,0,0,0.1)
 $input-bg-color: rgb(247,247,247)
 $error-color: rgb(207,41,64)
 $sucess-color: rgb(17,130,59)
-$spinner-color: rgb(150,150,150)
+$spinner-color: rgb(100,100,100)
 $gray-button: rgb(53,53,53)
 
 //Fonts
