--- a/src/components/ApiError/ApiError.sass
+++ b/src/components/ApiError/ApiError.sass
@@ -7,6 +7,8 @@
     left: 50%
     transform: translate(-50%,-50%)
     font-size: 1.6rem
+    text-align: center
+    line-height: 150%
     letter-spacing: 2.4px
     text-transform: uppercase
     color: variables.$main-color
