--- a/src/components/TopSliderNavigator/TopSliderNavigator.sass
+++ b/src/components/TopSliderNavigator/TopSliderNavigator.sass
@@ -13,15 +13,23 @@
     z-index: 2
     padding-right: 20px
     overflow: hidden
+    &__buttons
+        +mixins.positioning(flex,row,space-between,center,nowrap)
     &__cancel
         cursor: pointer
+        width: 12px
+    &__cancel-icon
+        display: block
+        width: 100%
     &__prev, &__next
+        display: block
+        width: 8px
         position: relative
         top: 25px
         transition: top .3s
         cursor: pointer
     &__prev
-        margin-right: 15px
+        margin-right: 30px
         transition-delay: 0s
     &__next
         transition-delay: .1s
