--- a/src/sass/Forms.sass
+++ b/src/sass/Forms.sass
@@ -1,7 +1,7 @@
 @use './mixins'
 @use './variables'
 
-.loginpopup, .subscribepopup, .newsletter
+.loginpopup, .subscribepopup, .newsletter, .userinfo, .editproduct
     font-family: variables.$second-font
     &__form
         position: relative
