add requested changes during code review

--- a/src/components/CartListing/CartListing.sass
+++ b/src/components/CartListing/CartListing.sass
@@ -87,3 +87,13 @@
         font-size: 1.7rem
         color: variables.$main-color
         letter-spacing: .2px
+    &__text
+        position: relative
+        font-family: variables.$second-font
+        font-size: 1.6rem
+        font-weight: 300
+        letter-spacing: .6px
+        bottom: -120px
+        opacity: 0
+        transition-duration: .8s
+        transition-timing-function: cubic-bezier(.17,.67,.33,.97)
