--- a/src/components/Dashboard/Dashboard.sass
+++ b/src/components/Dashboard/Dashboard.sass
@@ -64,6 +64,8 @@
         padding: 15px 8px
         font-size: 1.2rem
         font-weight: 400
+        border: none
+        background-color: transparent
         cursor: pointer
     &__quantity-output
         cursor: auto
