--- a/src/components/CartPopup/CartPopup.sass
+++ b/src/components/CartPopup/CartPopup.sass
@@ -33,6 +33,11 @@
         position: absolute
         top: 4vw
         right: 6vw
+        border: none
+        background-color: transparent
+    &__close-btn-icon
+        display: block
+        width: 100%
         color: variables.$main-color
         font-size: 40px
         transition: color .4s
@@ -68,16 +73,6 @@
         font-size: 44px
         letter-spacing: .6px
         font-weight: 500
-        bottom: -120px
-        opacity: 0
-        transition-duration: .8s
-        transition-timing-function: cubic-bezier(.17,.67,.33,.97)
-    &__text
-        position: relative
-        font-family: variables.$second-font
-        font-size: 1.6rem
-        font-weight: 300
-        letter-spacing: .6px
         bottom: -120px
         opacity: 0
         transition-duration: .8s
