--- a/src/components/ProductTile/ProductTile.sass
+++ b/src/components/ProductTile/ProductTile.sass
@@ -7,12 +7,9 @@
     border: 1px solid variables.$border-color
     padding: 5px
     opacity: 1
-    transform: scale(1)
-    transition: .5s transform, opacity .7s, border .5s
+    transition: border .5s
+    aspect-ratio: 1/1.27
     cursor: pointer
-    &.producttile--invisible
-        opacity: 0
-        transform: scale(0.95)
     &:hover
         border: 1px solid variables.$main-color
     &__link
@@ -20,6 +17,7 @@
         text-decoration: none
     &__picture
         display: block
+        aspect-ratio: 1/1
         width: 100%
     &__content
         position: relative
