error handling refactor, add helpers ,add more requested changes

--- a/src/components/AboutSlider/AboutSlider.sass
+++ b/src/components/AboutSlider/AboutSlider.sass
@@ -23,6 +23,10 @@
         letter-spacing: .6px
         text-align: center
         cursor: default
+    &__cta-pipe
+        display: block
+        font-size: 1.5rem
+        margin-top: 5px
     &__arrow
         +mixins.positioning(flex,row,center,center,wrap)
         position: absolute
