create viewport breakpoint variables, add MobileMenuContext

--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -14,3 +14,8 @@ $gray-button: rgb(53,53,53)
 //Fonts
 $main-font: 'Playfair display', sans-serif
 $second-font: 'Work Sans', sans-serif
+
+//Viewport Breakpoints
+
+$tablet-width-breakpoint: 1024px
+$mobile-width-breakpoint: 764px
